feat: Added pagination on list todos (#13)
* feat: Added user config

* feat: Added docker files and configurations

* docs: Update readme

* feat: Added pagination

* feat: Added pagination on list todos
